更多功能添加

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -288,6 +288,15 @@
 
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+
+
+    </style>
+
+    <style name="ACTAppTheme" parent="AppTheme">
+        <!-- Customize your theme here. -->
+
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
         <item name="android:windowAnimationStyle">@style/Animation</item>
 
     </style>
