更多功能添加

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,12 +10,14 @@
 
     <RelativeLayout
         android:id="@+id/rl_close"
-        android:layout_width="30dp"
-        android:layout_height="30dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <ImageView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_alignParentRight="true"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:layout_alignParentLeft="true"
             android:layout_gravity="left"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
