--- a/app/src/main/res/layout/activity_addcardfinal.xml
+++ b/app/src/main/res/layout/activity_addcardfinal.xml
@@ -1,115 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <include layout="@layout/layout_title_normal"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@color/font_normal"
+            android:background="@color/color_line"
+            android:paddingBottom="10dp"
             android:paddingLeft="15dp"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="@color/color_line"
-            android:text="信息确认"/>
+            android:text="信息确认"
+            android:textColor="@color/font_normal"
+            android:textSize="16sp"/>
+
         <LinearLayout
-            android:paddingLeft="15dp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="15dp">
+
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="49dp"
                 android:background="@color/white">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="@color/color_111111"
                     android:layout_centerVertical="true"
+                    android:text="持卡人"
+                    android:textColor="@color/color_111111"
 
-                    android:text="持卡人"/>
+                    android:textSize="15sp"/>
+
                 <TextView
                     android:id="@+id/tv_acctUser"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:background="@null"
-                    android:textColor="@color/color_111111"
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@+id/iv_tip_name"
+                    android:background="@null"
+                    android:textColor="@color/color_111111"
+                    android:textSize="15sp"
                     />
+
                 <ImageView
                     android:id="@+id/iv_tip_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/tip_icon"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
+                    android:paddingBottom="10dp"
                     android:paddingLeft="10dp"
                     android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:layout_marginRight="15dp"
+                    android:src="@drawable/tip_icon"
                     />
             </RelativeLayout>
+
             <include layout="@layout/line_e"/>
+
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="49dp"
                 android:background="@color/white">
+
                 <TextView
+                    android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="@color/color_111111"
                     android:layout_centerVertical="true"
                     android:text="卡号"
-                    android:id="@+id/textView3"/>
-                <TextView
+                    android:textColor="@color/color_111111"
+                    android:textSize="15sp"/>
+
+                <EditText
                     android:id="@+id/tv_acctNo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="@color/color_111111"
-                    android:background="@null"
                     android:layout_alignBaseline="@+id/textView3"
                     android:layout_alignBottom="@+id/textView3"
-                    android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:layout_marginRight="15dp"
+                    android:background="@null"
+                    android:textColor="@color/color_111111"
+                    android:textSize="15sp"
                     />
             </RelativeLayout>
+
             <include layout="@layout/line_e"/>
+
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="49dp"
                 android:background="@color/white">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="@color/color_111111"
                     android:layout_centerVertical="true"
-                    android:text="银行"/>
+                    android:text="银行"
+                    android:textColor="@color/color_111111"
+                    android:textSize="15sp"/>
+
                 <TextView
                     android:id="@+id/tv_acctName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="@color/color_111111"
-                    android:layout_centerVertical="true"
-                    android:background="@null"
                     android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
+                    android:background="@null"
+                    android:textColor="@color/color_111111"
+                    android:textSize="15sp"
                     />
             </RelativeLayout>
 
@@ -120,37 +134,40 @@
                 android:layout_width="fill_parent"
                 android:layout_height="49dp"
                 android:background="@color/white">
+
                 <TextView
                     android:id="@+id/tv_sjh"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="@color/color_111111"
                     android:layout_centerVertical="true"
-                    android:text="手机号"/>
+                    android:text="手机号"
+                    android:textColor="@color/color_111111"
+                    android:textSize="15sp"/>
+
                 <EditText
                     android:id="@+id/et_acctPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:gravity="right"
-                    android:background="@null"
-                    android:textColor="@color/color_111111"
                     android:layout_centerVertical="true"
-                    android:layout_toRightOf="@id/tv_sjh"
                     android:layout_toLeftOf="@+id/iv_tip_phone"
-                    android:hint="银行预留号码"/>
+                    android:layout_toRightOf="@id/tv_sjh"
+                    android:background="@null"
+                    android:gravity="right"
+                    android:hint="银行预留号码"
+                    android:textColor="@color/color_111111"
+                    android:textSize="15sp"/>
+
                 <ImageView
                     android:id="@+id/iv_tip_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/tip_icon"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
+                    android:paddingBottom="10dp"
                     android:paddingLeft="10dp"
                     android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:layout_marginRight="15dp"/>
+                    android:src="@drawable/tip_icon"/>
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
@@ -160,33 +177,37 @@
         android:layout_width="fill_parent"
         android:layout_height="42dp"
         android:layout_marginTop="30dp"
-        android:textSize="16sp"
-        android:textColor="#FEFEFE"
+        android:background="@drawable/button_bg"
         android:gravity="center"
         android:text="绑定银行卡"
-        android:background="@drawable/button_bg"/>
+        android:textColor="#FEFEFE"
+        android:textSize="16sp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="40dp"
         android:text="温馨提示"
-        android:textSize="16sp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="40dp"/>
+        android:textSize="16sp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1.该银行卡用于放款或还款，请确保该卡有效"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="1.该银行卡用于放款或还款，请确保该卡有效"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2.该银行卡借卡人与持卡人必须一致"
-        android:layout_marginLeft="15dp"/>
+        android:layout_marginLeft="15dp"
+        android:text="2.该银行卡借卡人与持卡人必须一致"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3.该银行卡必须是借记卡，信用卡无效"
+        android:layout_marginBottom="30dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginBottom="30dp"/>
+        android:text="3.该银行卡必须是借记卡，信用卡无效"/>
 </LinearLayout>
