--- a/app/src/main/res/layout/activity_repay_detail.xml
+++ b/app/src/main/res/layout/activity_repay_detail.xml
@@ -49,7 +49,7 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="23dp"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:paddingLeft="15dp"
         android:paddingRight="15dp">
@@ -65,22 +65,23 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textColor="@color/font_normal"
             android:layout_marginRight="11dp"
             android:text="年利率"
-            android:gravity="center"
+            android:layout_marginTop="8dp"
             android:layout_toLeftOf="@+id/tv_yearrate"
             android:layout_marginEnd="11dp"/>
 
         <TextView
             android:id="@+id/tv_yearrate"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textColor="@color/color_hint"
             android:gravity="center"
+            android:layout_marginTop="8dp"
             android:layout_alignParentRight="true"
             android:text="10%"/>
 
