--- a/app/src/main/res/layout/fragment_unpay.xml
+++ b/app/src/main/res/layout/fragment_unpay.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_tiptext"
@@ -23,14 +23,16 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:paddingBottom="15dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp">
+        android:paddingTop="15dp">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -42,41 +44,46 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="1389.34"
+                android:text="--"
                 android:textColor="@color/color_111111"
                 android:textSize="23sp"
                 android:textStyle="bold"/>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginRight="15dp"
-            android:layout_toLeftOf="@+id/iv_click">
+            android:layout_toLeftOf="@+id/iv_click"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="剩余应还（元）"
                 android:textAppearance="@style/TextAppear.Theme.font40_Size14"/>
+
             <TextView
                 android:id="@+id/tv_restAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="23sp"
-                android:textColor="@color/color_111111"
-                android:layout_marginTop="24dp"
                 android:layout_gravity="right"
-                android:textStyle="bold"
-                android:text="389.34"/>
+                android:layout_marginTop="24dp"
+                android:text="--"
+                android:textColor="@color/color_111111"
+                android:textSize="23sp"
+                android:textStyle="bold"/>
         </LinearLayout>
+
         <ImageView
             android:id="@+id/iv_click"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_click"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:src="@drawable/icon_click"/>
     </RelativeLayout>
+
     <View
         android:layout_width="fill_parent"
         android:layout_height="10dp"
@@ -86,6 +93,7 @@
         android:id="@+id/swiper_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ListView
             android:id="@+id/lv_unpay_bill"
             android:layout_width="fill_parent"
