--- a/app/src/main/res/layout/activity_repayinfo.xml
+++ b/app/src/main/res/layout/activity_repayinfo.xml
@@ -60,8 +60,7 @@
                     android:layout_gravity="center_horizontal"
                     android:textSize="30sp"
                     android:textColor="@color/color_111111"
-                    android:textStyle="bold"
-                    android:text="762.87"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -99,8 +98,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
-                            android:layout_alignParentRight="true"
-                            android:text="+100.00元"/>
+                            android:layout_alignParentRight="true"/>
                     </RelativeLayout>
                     <RelativeLayout
                         android:layout_width="fill_parent"
@@ -117,8 +115,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
-                            android:layout_alignParentRight="true"
-                            android:text="+30.00元"/>
+                            android:layout_alignParentRight="true"/>
                     </RelativeLayout>
                     <RelativeLayout
                         android:visibility="gone"
@@ -171,8 +168,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
-                            android:layout_alignParentRight="true"
-                            android:text="+20.00元"/>
+                            android:layout_alignParentRight="true"/>
                     </RelativeLayout>
                     <RelativeLayout
                         android:visibility="gone"
@@ -207,8 +203,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
-                            android:layout_alignParentRight="true"
-                            android:text="+100.00元"/>
+                            android:layout_alignParentRight="true"/>
                     </RelativeLayout>
                     <RelativeLayout
                         android:layout_width="fill_parent"
@@ -225,8 +220,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
-                            android:layout_alignParentRight="true"
-                            android:text="-0.00元"/>
+                            android:layout_alignParentRight="true"/>
                     </RelativeLayout>
                     <RelativeLayout
                         android:layout_width="fill_parent"
@@ -243,8 +237,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
-                            android:layout_alignParentRight="true"
-                            android:text="-0.00元"/>
+                            android:layout_alignParentRight="true"/>
                     </RelativeLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -292,8 +285,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
-                        android:layout_alignParentRight="true"
-                        android:text="银行卡"/>
+                        android:layout_alignParentRight="true"/>
                 </RelativeLayout>
                 <RelativeLayout
                     android:layout_width="fill_parent"
@@ -312,8 +304,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
+                        android:layout_alignParentTop="true"
                         android:layout_alignParentRight="true"
-                        android:text="6227 0978 5634 2345"/>
+                        android:layout_alignParentEnd="true"/>
                 </RelativeLayout>
                 <RelativeLayout
                     android:layout_width="fill_parent"
@@ -332,8 +325,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
-                        android:layout_alignParentRight="true"
-                        android:text="2017/09/30 23:57:09"/>
+                        android:layout_alignParentRight="true"/>
                 </RelativeLayout>
                 <View
                     android:layout_width="fill_parent"
