--- a/app/src/main/res/layout/activity_banner_item.xml
+++ b/app/src/main/res/layout/activity_banner_item.xml
@@ -8,7 +8,10 @@
         android:id="@+id/banner_img"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/banner1"/>
+        android:background="@drawable/banner1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 
     <LinearLayout
@@ -21,27 +24,27 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/iv_banner1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/line_yellow"/>
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_dot"/>
         <ImageView
             android:id="@+id/iv_banner2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:src="@drawable/line_white"/>
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_dot"
+            android:layout_marginLeft="15dp"/>
         <ImageView
             android:id="@+id/iv_banner3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:src="@drawable/line_white"/>
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_dot"
+            android:layout_marginLeft="15dp"/>
         <ImageView
             android:id="@+id/iv_banner4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:src="@drawable/line_white"/>
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_dot"
+            android:layout_marginLeft="15dp"/>
 
     </LinearLayout>
 
