--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,3 +1,3 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-cache-path name="cache_download" path="download"/>
+    <external-path name="external" path="Download"/>
 </paths>
