--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -94,7 +94,8 @@
             android:id="@+id/red_imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/unread_new"/>
+            android:src="@drawable/unread_new"
+            android:visibility="gone"/>
 
         <ImageView
             style="@style/tabmy_arrow"/>
