--- a/app/src/main/res/layout/activity_loan_records.xml
+++ b/app/src/main/res/layout/activity_loan_records.xml
@@ -24,4 +24,8 @@
         android:layout_height="match_parent" />
 
 
+    <include
+        android:id="@+id/empty_view"
+        layout="@layout/layout_loan_empty"
+        android:visibility="gone"/>
 </LinearLayout>
