--- a/app/src/main/res/drawable/selector_btn_yellow.xml
+++ b/app/src/main/res/drawable/selector_btn_yellow.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false">
-        <shape>
-            <corners android:radius="5dp"/>
-            <solid android:color="@color/btn_normal"/>
-        </shape>
+    <item android:state_pressed="false" android:drawable="@drawable/btn_normal">
+        <!--<shape>-->
+            <!--<corners android:radius="5dp"/>-->
+            <!--<solid android:color="@color/btn_normal"/>-->
+        <!--</shape>-->
     </item>
-    <item android:state_pressed="true">
-        <shape>
-            <corners android:radius="5dp"/>
-            <solid android:color="@color/btn_pressed"/>
-        </shape>
+    <item android:state_pressed="true" android:drawable="@drawable/btn_pressed">
+        <!--<shape>-->
+            <!--<corners android:radius="5dp"/>-->
+            <!--<solid android:color="@color/btn_pressed"/>-->
+        <!--</shape>-->
     </item>
 </selector>
