--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -178,7 +178,9 @@
                 android:textColor="#FEFEFE"
                 android:gravity="center"
                 android:text="立即申请"
-                android:background="@drawable/button_bg"/>
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/selector_btn_yellow"/>
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="10dp"
