--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="taolidai"
+        android:text="@string/app_name"
         android:layout_marginTop="20dp"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppear.Theme.font30_Size16"
@@ -120,7 +120,7 @@
             android:gravity="center"
             android:textSize="16sp"
             android:layout_centerVertical="true"
-            android:textColor="#2756ec"/>
+            android:textColor="@color/btn_normal"/>
     </RelativeLayout>
 
     <View
@@ -137,12 +137,11 @@
         android:layout_height="42dp"
         android:layout_marginTop="30dp"
         android:gravity="center"
+        android:textAppearance="@style/TextAppear.Theme.font30_Size16"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:textAppearance="@style/TextAppear.Theme.font30_Size16"
-        android:background="@drawable/bg_button"
+        android:background="@drawable/selector_btn_yellow"
         android:textColor="#FFFFFF"
-        android:text="立即登录"
-        />
+        android:text="立即登录"/>
 
 </LinearLayout>
