--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -7,5 +7,54 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_content"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"></android.support.v4.view.ViewPager>
+        android:layout_height="fill_parent">
+
+    </android.support.v4.view.ViewPager>
+
+    <LinearLayout
+        android:id="@+id/ll_line"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="60dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/iv_banner1"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_dot_yellow"/>
+        <ImageView
+            android:id="@+id/iv_banner2"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_dot"
+            android:layout_marginLeft="15dp"/>
+        <ImageView
+            android:id="@+id/iv_banner3"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_dot"
+            android:layout_marginLeft="15dp"/>
+        <ImageView
+            android:id="@+id/iv_banner4"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_dot"
+            android:layout_marginLeft="15dp"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_btn"
+        android:visibility="gone"
+        android:layout_width="132dp"
+        android:layout_height="36dp"
+        android:text="开启旅程"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="48dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:background="@drawable/bg_bannerbtn"
+        android:textColor="@color/color_price"/>
 </RelativeLayout>
