--- a/app/src/main/res/layout/fragment_unpay.xml
+++ b/app/src/main/res/layout/fragment_unpay.xml
@@ -1,102 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_tiptext"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#2a2a2a"
-        android:paddingBottom="10dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="10dp"
-        android:text="@string/unpay_text"
-        android:textColor="@color/white"
-        android:textSize="14sp"/>
 
     <RelativeLayout
-        android:id="@+id/rl_billinfo"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingBottom="15dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="15dp">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="总共应还（元）"
-                android:textAppearance="@style/TextAppear.Theme.font40_Size14"/>
-
-            <TextView
-                android:id="@+id/tv_totalMoney"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="--"
-                android:textColor="@color/color_111111"
-                android:textSize="23sp"
-                android:textStyle="bold"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
-            android:layout_toLeftOf="@+id/iv_click"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="剩余应还（元）"
-                android:textAppearance="@style/TextAppear.Theme.font40_Size14"/>
-
-            <TextView
-                android:id="@+id/tv_restAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="24dp"
-                android:text="--"
-                android:textColor="@color/color_111111"
-                android:textSize="23sp"
-                android:textStyle="bold"/>
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/iv_click"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/icon_click"/>
-    </RelativeLayout>
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="10dp"
-        android:background="@color/color_line"/>
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swiper_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
+        <com.bb.taold.widget.EmptyView
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:content_text="暂无账单"/>
+
+        <com.github.jdsjlzx.recyclerview.LRecyclerView
             android:id="@+id/lv_unpay_bill"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"></ListView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_width="match_parent"
+
+            android:layout_height="match_parent"/>
+
+
+    </RelativeLayout>
 </LinearLayout>
