--- a/app/src/main/res/layout/layout_loan_empty.xml
+++ b/app/src/main/res/layout/layout_loan_empty.xml
@@ -3,29 +3,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/white"
+    android:gravity="center"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/icon_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/application_record"/>
+
     <TextView
+        android:id="@+id/content_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawablePadding="10dip"
-        android:drawableTop="@drawable/application_record"
+        android:layout_marginTop="10dip"
         android:gravity="center"
         android:text="暂无数据"
         android:textColor="#ff898989"
         android:textSize="16sp"
-         />
+        />
 
 
     <TextView
         android:id="@+id/tv_go_loan"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/bg_loan_text"
-        android:layout_width="100dp"
         android:gravity="center"
-        android:layout_height="40dp"
         android:text="立即借款"/>
 
 </LinearLayout>
