--- a/app/src/main/res/layout/bill_layout.xml
+++ b/app/src/main/res/layout/bill_layout.xml
@@ -84,7 +84,7 @@
     </RelativeLayout>
 
     <View
-        android:layout_width="fill_parent"
-        android:layout_height="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
         android:background="@color/color_line"/>
 </LinearLayout>
