--- a/app/src/main/res/layout/fragment_allpay.xml
+++ b/app/src/main/res/layout/fragment_allpay.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/common_backgroud"
+    android:orientation="vertical">
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="20dp"
-        android:background="@color/color_line"/>
+        <com.bb.taold.widget.EmptyView
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/common_backgroud"
+            android:visibility="gone"
+            app:content_text="暂无账单"/>
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swiper_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
+        <com.github.jdsjlzx.recyclerview.LRecyclerView
             android:id="@+id/lv_allpay"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"></ListView>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </RelativeLayout>
+
 
 </LinearLayout>
