--- a/app/src/main/res/layout/fragment_repay.xml
+++ b/app/src/main/res/layout/fragment_repay.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include layout="@layout/layout_title"/>
 
@@ -23,22 +23,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
+
                 <TextView
                     android:id="@+id/tv_unpay"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center"
                     android:background="@color/white"
+                    android:gravity="center"
                     android:text="未还款"
                     android:textColor="@color/color_price"
                     android:textSize="16sp"/>
+
                 <View
                     android:id="@+id/view_line_unpay"
                     android:layout_width="22dp"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
                     android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginBottom="3dp"
                     android:layout_marginTop="36dp"
                     android:background="@drawable/bg_line"/>
@@ -49,36 +51,43 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
+
                 <TextView
                     android:id="@+id/tv_allPay"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
                     android:background="@color/white"
                     android:gravity="center"
                     android:text="全部"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"/>
+                    android:textSize="16sp"/>
+
                 <View
                     android:id="@+id/view_line_allpay"
                     android:layout_width="22dp"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
                     android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginBottom="3dp"
                     android:layout_marginTop="36dp"
-                    android:visibility="gone"
-                    android:background="@drawable/bg_line"/>
+                    android:background="@drawable/bg_line"
+                    android:visibility="gone"/>
             </RelativeLayout>
 
         </LinearLayout>
     </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/color_line"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
