更换银行卡，借款成功跳转接口。

--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -316,9 +316,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginBottom="10dp"
+                    android:paddingBottom="10dp"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="10dp"
+                    android:paddingTop="10dp"
                     android:text="更换银行"
                     android:textColor="@color/color_111111"
                     android:textSize="14sp"/>
