--- a/app/src/main/res/layout/activity_cardlist.xml
+++ b/app/src/main/res/layout/activity_cardlist.xml
@@ -10,19 +10,26 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swiper_refresh"
+        <!--<android.support.v4.widget.SwipeRefreshLayout-->
+            <!--android:id="@+id/swiper_refresh"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_above="@+id/tv_addcard">-->
+            <!--<ListView-->
+                <!--android:id="@+id/lv_cardlist"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:padding="0dp"-->
+                <!--android:scrollbars="none" >-->
+            <!--</ListView>-->
+        <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+        <com.github.jdsjlzx.recyclerview.LRecyclerView
+            android:id="@+id/rv_card_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/tv_addcard">
-            <ListView
-                android:id="@+id/lv_cardlist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="0dp"
-                android:scrollbars="none" >
-            </ListView>
-        </android.support.v4.widget.SwipeRefreshLayout>
+            >
+
+        </com.github.jdsjlzx.recyclerview.LRecyclerView>
 
         <TextView
             android:id="@+id/tv_addcard"
