--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -1,28 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.bb.taold.widget.SwipeListLayout
+<com.bb.taold.adapter.recycleradapter.SwipeMenuView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sll_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/tv_delete"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:background="#ff0000"
-            android:textSize="15sp"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:text="解除绑定" />
-    </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/swiper_content"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/white">
@@ -37,7 +23,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_toRightOf="@id/iv_bankicon"
+            android:layout_toRightOf="@+id/iv_bankicon"
             android:layout_marginLeft="10dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
@@ -78,4 +64,21 @@
             android:layout_centerVertical="true"/>
     </RelativeLayout>
 
-</com.bb.taold.widget.SwipeListLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/tv_delete"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:background="#ff0000"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:text="解除绑定" />
+    </LinearLayout>
+
+</com.bb.taold.adapter.recycleradapter.SwipeMenuView>
